--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -733,9 +733,11 @@ body {
   font-weight: bold;
   margin-top: 7px;
 }
-.sec__h{padding: 15px 15px 50px 15px;}
+.sec__h{padding: 0px 15px 40px 15px;}
 .fullbodyclose{
   position: relative;
+  padding: 40px 0px;
+  background-color: #FFF8E9!important;
 }
 .fullbodyclose .btn-close{
   position: absolute;
@@ -750,17 +752,43 @@ body {
 
 } */
 /* ----pricing---- */
+.amazonbox{
+  padding: 15px;
+  padding-bottom: 0px;
+  background-color: #fdfdfd;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  overflow: hidden;
+  margin-top: 40px;
+}
 .AmazonSeller{
   font-size: 18px;
-  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
   font-weight: bold;
+  margin: 0px;
+  padding-bottom: 15px;
+}
+.subcribeNote{
+  padding-top: 15px;
+  text-align: center;
+  opacity: 0.65;
+}
+.AmazonSeller .viewmore{
+  font-size: 16px!important;
+  color: var(--primary-background);
+  cursor: pointer;
+  font-weight: normal;
 }
 .pricing-container{
   background: #fff;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
 }
+.input-group-text.text-muted{padding: 0px 5px!important;}
 .features-list {
   display: flex;
   flex-wrap: wrap;
@@ -800,6 +828,7 @@ body {
   border-radius: 12px;
   cursor: pointer;
   box-sizing: border-box;
+  background-color: #fff;
 }
 .plan_details h2{
   font-size: 21px;
@@ -808,18 +837,18 @@ body {
   line-height: 23px;
 }
 .plan_details .price_p{
-  height: 74px;
+  height: 68px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: bold;
   flex-direction: column;
 }
 .price_p .offeramount{
   color: #7A7C84;
-  margin-top: 9px;
-  font-size: 15px;
+  margin-top: 6px;
+  font-size: 14px;
   font-weight: normal;
 }
 .btnekomn.subscribebtn{
@@ -838,10 +867,14 @@ body {
   color: #fff;
 }
 .plan_details.bestplan{
-  height: 222px;
+  height: 216px;
   position: relative;
   top: -48px;
   padding-top: 63px;
+}
+.posup{
+  position: relative;
+  top: -1px;
 }
 .plan_details.bestplan.active{
   background-color: var(--secondary-background);
