--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4026,6 +4026,18 @@ header,footer{position: relative;z-index: 1000;}
   border-radius: 0.25rem;
 }
 
+.imagecontainer{
+  position: relative;
+}
+.imagecontainer .deleteMain{
+  padding: 0px !important;
+  font-size: 16px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  color: indianred;
+  cursor: pointer;
+}
 @media (max-width: 1024px) {
   .barIcon,.topSection_w_cat{display: block;}
   .productFilters,.brandLogo,.notificationDropdown,
