--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3990,7 +3990,7 @@ header,footer{position: relative;z-index: 1000;}
 .ekfilterList {
   list-style-type: none;
   display: flex;
-  gap: 10px;
+  gap: 8px;
   flex-direction: row;
   flex-wrap: wrap;
   padding: 0;
@@ -4005,9 +4005,9 @@ header,footer{position: relative;z-index: 1000;}
   background-color: #fff;
   border: 1px solid #ced4da;
   border-radius: 3px;
-  height: 36px;
-  padding: 0px 30px 0px 10px!important;
-  line-height: 34px!important;
+  height: 34px;
+  padding: 0px 25px 0px 10px!important;
+  line-height: 32px!important;
   box-sizing: border-box;
   position: relative;
 }
@@ -4020,11 +4020,93 @@ header,footer{position: relative;z-index: 1000;}
   top: 50%;
   transform: translateY(-50%);
 }
-
 .ekfilterList .dropdown-menu {
   width: 100%;
   border-radius: 0.25rem;
 }
+.ekfilterList input,.ekfilterList select, .ekfilterList .filterSelectBox,
+  .tableSearch input,.tableSearch select, .tableSearch .filterSelectBox,.stripbtn{
+		font-size: 15px!important;
+		height: 34px!important;
+	}
+  .tableSearch{
+    margin-bottom: 5px;
+    margin-top: 30px;
+  }
+	.calanderWithName{
+		border: 1px solid #ced4da;
+		border-radius: 3px;
+		display: flex;
+	}
+	.calUplabel{
+		position: relative;
+	}
+	.calUplabel input{
+		width: 220px!important;
+		height: 32px!important;
+		padding-left: 126px;
+	}
+  .filterbtnsize{height: 32px!important;}
+	.calLabel{
+		position: absolute;
+		left: 9px;
+		top: 6px;
+		opacity: 0.5;
+	}
+	.calUplabel.dateRange_c input{
+		width: 280px!important;
+		padding-left: 96px;
+	}
+	.weekamount{
+		background-color: #f8f8f8;
+		height: 32px;
+		line-height: 32px;
+		padding: 0px 8px;
+		border-left: 1px solid #f0f0f0;
+    width: 100%;
+	}
+  .showTotalBox{
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    display: flex;
+    column-gap: 20px;
+    height: 30px;
+  }
+  .showTotalBox:last-child{
+    border-right: 1px solid #fff;
+  }
+  .paymentcardhead{position: relative;}
+  .filterStrip{
+    position: relative;
+    margin: 15px 0px 10px 0px;
+  }
+  .filterStripwithbtn{
+    padding-right: 140px;
+  }
+  .stripbtn{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+  }
+  @media(max-width:576px){
+    .ekfilterList{display: block;}
+    .cardhead.paymentcardhead{display: block;padding-bottom: 0px;}
+    .filterStripwithbtn{padding-right: 0px;}
+    .stripbtn{position: static;top: 10px;float: right;}
+    .ekfilterList > li{margin-bottom: 10px;}
+    .showTotalBox._productID{
+    position: static;
+    display: block;
+    height: auto;
+    padding: 10px;
+    margin-top: 10px;
+    background-color: #f0f0f0;
+    border: 1px solid #e2e2e2;
+  }
+  .showTotalBox._productID::before{content: none;}
+  }
+
 .collapse-group-1,.collapse-group-2 {display: none;}
 .collapse-toggle {cursor: pointer;}
 
