--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -271,6 +271,45 @@ th.h_sorting.active.desc i.fa-caret-up{
 }
 
 
+.tooltips {
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  /* border-bottom: 1px dotted black; */
+}
+
+.tooltips .tooltiptext {
+  visibility: hidden;
+  width: 30%;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  /* left: 50%; */
+  /* margin-left: -60px; */
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltips .tooltiptext::after {
+  content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+  }
+
+  .tooltips:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+  }
 
 
 
