--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1334,6 +1334,8 @@ opacity: 0.5;
   .categoryList > li {width: 100%;}
   .categoryList.mobile50 > li {width: 50%;}
   .uploadlabel{left: 0px;}
+  .stockdiv span{display: block;}
+  .stockdiv {flex-direction: column; align-items: start !important;}
 }
 /* end dashboard */
 
