--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4255,3 +4255,131 @@ a.underline{
 }
 }
 
+
+/* Shine Css */
+
+h1 {
+  color: green;
+}
+
+/* bulk uplaod list css popup  */
+
+.popup-button {
+  color: #FFB20C;
+  background: none;
+  border: none;
+  cursor: pointer; /* Added for better UX */
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: none;
+  z-index: 1000;
+}
+
+#popupDialog {
+  width: 90%;
+  max-width: 600px; /* Sets a max width for larger screens */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  display: none;
+  z-index: 1001;
+  max-height: 80vh; /* Adjusts height relative to viewport */
+  overflow-y: auto;
+  border-radius: 8px; /* Added for better aesthetics */
+  
+}
+
+
+/* Media queries for responsiveness */
+@media (min-width: 600px) {
+  #popupDialog {
+    width: 70%;
+  }
+}
+
+@media (min-width: 768px) {
+  #popupDialog {
+    width: 60%;
+  }
+}
+
+@media (min-width: 992px) {
+  #popupDialog {
+    width: 50%;
+  }
+}
+
+.popup-btn{
+  float: right;
+}
+
+.star-rating{
+  display: flex;
+  font-size: 24px;
+  column-gap: 4px;
+}
+.star {
+  cursor: pointer;
+  color: #ccc;
+  transition: color 0.2s;
+}
+.star.hover,.star.active {color: #FECA40;}
+.rateustext{margin-top: 2px;margin-right: 5px;}
+textarea.resizer_none{resize:none!important;}
+
+
+.star-rating .fas {
+  color: gold; /* Yellow color for filled stars */
+}
+.star-rating .far {
+  color: lightgray; /* Light gray color for empty stars */
+}
+.red-text {
+  color: red;
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+.blink {
+  animation: blink 0.6s step-start infinite;
+}
+
+.blink:hover {
+  animation: none; /* Pause blinking on hover */
+}
+
+
+/* end */
+
+
+
+.custom-confirm-btn {
+  background-color: #FFB20C !important; /* Custom color */
+  color: white !important;              /* Text color */
+  border: none;                         /* Remove border */
+}
+
+.custom-error-btn {
+  background-color: #d33 !important;    /* Error button color */
+  color: white !important;              /* Text color */
+  border: none;                         /* Remove border */
+}
+
+.swal2-title-red {
+  color: red !important; /* Ensure the title is red */
+}
